manifests/base/resources/reload-tasks/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reload-tasks
    chart: reload-tasks-1.6.5
    heritage: Helm
    release: reload-tasks
  name: reload-tasks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reload-tasks
      release: reload-tasks
  template:
    metadata:
      labels:
        app: reload-tasks
        release: reload-tasks
    spec:
      containers:
        - env:
            - name: KEYS_URI
              valueFrom:
                configMapKeyRef:
                  key: keysUri
                  name: reload-tasks-configs
            - name: AUTH_JWKS_URI
              value: $(KEYS_URI)/v1/keys/qlik.api.internal
            - name: CHRONOS_URI
              valueFrom:
                configMapKeyRef:
                  key: chronosUri
                  name: reload-tasks-configs
            - name: QIX_DATA_RELOAD_URI
              valueFrom:
                configMapKeyRef:
                  key: qixDataReloadUri
                  name: reload-tasks-configs
            - name: CHRONOS_ACTION_URI
              value: $(QIX_DATA_RELOAD_URI)/v1/scheduledreloads
            - name: MONGODB_URI
              valueFrom:
                secretKeyRef:
                  key: mongodbUri
                  name: reload-tasks-secrets
            - name: MONGO_URI
              value: $(MONGODB_URI)
            - name: TOKEN_AUTH_PRIVATE_KEY
              valueFrom:
                secretKeyRef:
                  key: tokenAuthPrivateKey
                  name: reload-tasks-secrets
            - name: SELF_SIGNING_PRIVATE_KEY
              value: $(TOKEN_AUTH_PRIVATE_KEY)
            - name: TOKEN_AUTH_PRIVATE_KEY_ID
              valueFrom:
                secretKeyRef:
                  key: tokenAuthPrivateKeyId
                  name: reload-tasks-secrets
            - name: KEY_IDENTIFIER
              value: $(TOKEN_AUTH_PRIVATE_KEY_ID)
            - name: NATS_STREAMING_CLUSTER_ID
              valueFrom:
                configMapKeyRef:
                  key: natsStreamingClusterId
                  name: reload-tasks-secrets
            - name: STAN_CLUSTER_ID
              value: $(NATS_STREAMING_CLUSTER_ID)
            - name: AUTH_ENABLED
              value: "true"
            - name: SINGING_ALGORITHM
              value: ES384
            - name: MESSAGING_ENABLED
              value: "false"
            - name: NATS_CLIENT_ID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: AUTH_JWT_AUD
              value: qlik.api.internal
            - name: CHRONOS_AUTH_JWT_AUD
              value: qlik.api.internal/qix-data-reload
            - name: AUTH_JWT_ISS
              value: qlik.api.internal
            - name: MAX_CONSECUTIVE_FAILURES
              value: "5"
          image: qliktech-docker.jfrog.io/reload-tasks:1.1.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          name: main
          ports:
            - containerPort: 8080
          volumeMounts: null
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes: null
---
