manifests/base/resources/reload-tasks/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: reload-tasks
    chart: reload-tasks-1.6.4
    heritage: Helm
    release: reload-tasks
  name: reload-tasks
spec:
  ports:
  - name: reload-tasks
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: reload-tasks
    release: reload-tasks
  type: ClusterIP
---
