manifests/base/resources/reload-tasks/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://reload-tasks-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
  labels:
    app: reload-tasks
    chart: reload-tasks-1.6.4
    heritage: Helm
    release: reload-tasks
  name: reload-tasks
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: reload-tasks
          servicePort: 8080
        path: /api/v1/reload-tasks
---
